@@ -1630,13 +1630,10 @@ wxDragResult wxDataViewMainWindow::OnDragOver( wxDataFormat format, wxCoord x,
     m_owner->CalcUnscrolledPosition( xx, yy, &xx, &yy );
     unsigned int row = GetLineAt( yy );
 
-    if ((row >= GetRowCount()) || (xx > GetEndOfLastCol()))
-    {
-        RemoveDropHint();
-        return wxDragNone;
-    }
+    wxDataViewItem item;
 
-    wxDataViewItem item = GetItemByRow( row );
+    if ( row < GetRowCount() && xx <= GetEndOfLastCol() )
+        item = GetItemByRow( row );
 
     wxDataViewModel *model = GetModel();
 
@@ -1646,24 +1643,24 @@ wxDragResult wxDataViewMainWindow::OnDragOver( wxDataFormat format, wxCoord x,
     event.SetModel( model );
     event.SetDataFormat( format );
     event.SetDropEffect( def );
-    if (!m_owner->HandleWindowEvent( event ))
+    if ( !m_owner->HandleWindowEvent( event ) || !event.IsAllowed() )
     {
         RemoveDropHint();
         return wxDragNone;
     }
 
-    if (!event.IsAllowed())
+    if ( item.IsOk() )
+    {
+        if (m_dropHint && (row != m_dropHintLine))
+            RefreshRow( m_dropHintLine );
+        m_dropHint = true;
+        m_dropHintLine = row;
+        RefreshRow( row );
+    }
+    else
     {
         RemoveDropHint();
-        return wxDragNone;
     }
-
-
-    if (m_dropHint && (row != m_dropHintLine))
-        RefreshRow( m_dropHintLine );
-    m_dropHint = true;
-    m_dropHintLine = row;
-    RefreshRow( row );
 
     return def;
 }
@@ -1677,10 +1674,10 @@ bool wxDataViewMainWindow::OnDrop( wxDataFormat format, wxCoord x, wxCoord y )
     m_owner->CalcUnscrolledPosition( xx, yy, &xx, &yy );
     unsigned int row = GetLineAt( yy );
 
-    if ((row >= GetRowCount()) || (xx > GetEndOfLastCol()))
-        return false;
+    wxDataViewItem item;
 
-    wxDataViewItem item = GetItemByRow( row );
+    if ( row < GetRowCount() && xx <= GetEndOfLastCol())
+       item = GetItemByRow( row );
 
     wxDataViewModel *model = GetModel();
 
@@ -1689,10 +1686,7 @@ bool wxDataViewMainWindow::OnDrop( wxDataFormat format, wxCoord x, wxCoord y )
     event.SetItem( item );
     event.SetModel( model );
     event.SetDataFormat( format );
-    if (!m_owner->HandleWindowEvent( event ))
-        return false;
-
-    if (!event.IsAllowed())
+    if (!m_owner->HandleWindowEvent( event ) || !event.IsAllowed())
         return false;
 
     return true;
@@ -1706,10 +1700,10 @@ wxDragResult wxDataViewMainWindow::OnData( wxDataFormat format, wxCoord x, wxCoo
     m_owner->CalcUnscrolledPosition( xx, yy, &xx, &yy );
     unsigned int row = GetLineAt( yy );
 
-    if ((row >= GetRowCount()) || (xx > GetEndOfLastCol()))
-        return wxDragNone;
+    wxDataViewItem item;
 
-    wxDataViewItem item = GetItemByRow( row );
+    if ( row < GetRowCount() && xx <= GetEndOfLastCol() )
+        item = GetItemByRow( row );
 
     wxDataViewModel *model = GetModel();
 
@@ -1723,10 +1717,7 @@ wxDragResult wxDataViewMainWindow::OnData( wxDataFormat format, wxCoord x, wxCoo
     event.SetDataSize( obj->GetSize() );
     event.SetDataBuffer( obj->GetData() );
     event.SetDropEffect( def );
-    if (!m_owner->HandleWindowEvent( event ))
-        return wxDragNone;
-
-    if (!event.IsAllowed())
+    if ( !m_owner->HandleWindowEvent( event ) || !event.IsAllowed() )
         return wxDragNone;
 
     return def;
